--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="A marketplace for used cars sales"
-    />
-    <meta
-    name="keywords"
-    content="marketplace, used cars, car sales"
-  />
+    <meta name="description" content="A marketplace for used cars sales" />
+    <meta name="keywords" content="marketplace, used cars, car sales" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -34,7 +28,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="https://kit.fontawesome.com/d2d5fe6d3e.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/d2d5fe6d3e.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Welcome to Carss - A vehicle marketplace!</title>
   </head>
   <body>
